2009-04-28  Gary Benson  <gbenson@redhat.com>

	* patches/hotspot/default/icedtea-shark.patch
	(ciInstanceKlass::constant_pool_tag_at): New method.
	* ports/hotspot/src/share/vm/shark/sharkTopLevelBlock.hpp
	(SharkTopLevelBlock::do_full_instance_check): New method.
	(SharkTopLevelBlock::do_trapping_instance_check): Likewise.
	* ports/hotspot/src/share/vm/shark/sharkTopLevelBlock.cpp
	(SharkTopLevelBlock::do_instance_check): Split.
	(SharkTopLevelBlock::do_full_instance_check): New method.
	(SharkTopLevelBlock::do_trapping_instance_check): Likewise.
	* ports/hotspot/src/share/vm/shark/sharkRuntime.hpp
	(SharkRuntime::_resolve_klass): Removed.
	(SharkRuntime::resolve_klass): Likewise.
	(SharkRuntime::resolve_klass_C): Likewise.
	* ports/hotspot/src/share/vm/shark/sharkRuntime.cpp
	(SharkRuntime::_resolve_klass): Likewise.
	(SharkRuntime::resolve_klass_C): Likewise.
	(SharkRuntime::initialize): Removed _resolve_klass init.

2009-04-27 Deepak Bhole <dbhole@redhat.com>

	* plugin/icedtea/sun/applet/PluginAppletViewer.java: Unescape &quot;
	* rt/net/sourceforge/jnlp/runtime/Boot.java: Use custom authenticator for
	javaws, so that it can handle SSL sites correctly

2009-04-27  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkBlock.hpp
	(SharkBlock::has_trap): New method.
	(SharkBlock::trap_request): Likewise.
	(SharkBlock::trap_bci): Likewise.
	(SharkBlock::do_trap): Likewise.
	* ports/hotspot/src/share/vm/shark/sharkBlock.cpp
	(SharkBlock::has_trap): New method.
	(SharkBlock::trap_request): Likewise.
	(SharkBlock::trap_bci): Likewise.
	(SharkBlock::do_trap): Likewise.
	(SharkBlock::parse_bytecode): Handle traps.
	* ports/hotspot/src/share/vm/shark/sharkTopLevelBlock.hpp
	(SharkTopLevelBlock::_has_trap): New field.
	(SharkTopLevelBlock::_trap_bci): Likewise.
	(SharkTopLevelBlock::has-trap): Updated.
	(SharkTopLevelBlock::trap_request): Likewise.
	(SharkTopLevelBlock::set_trap): New method.
	(SharkTopLevelBlock::trap_bci): Likewise.