@@ -33,6 +33,7 @@ tools-source-files.txt
 platform_zero
 jvm.cfg
 ergo.c
+tapset/hotspot.stp
 test/hotspot
 test/jdk
 test/langtools
