@@ -1,3 +1,12 @@
+2009-04-28  Mark Wielaard  <mjw@redhat.com>
+
+	* tapset/hotspot.stp.in: New systemtap tapset for hotspot.
+	* configure.ac: Add check for abs-install-dir when
+	--enable-systemtap is given.
+	* Makefile.am (icedtea.stamp): Install tapsets.
+	(icedtea-debug.stamp): Likewise.
+	* .hgignore: Add tapset/hotspot.stp.
+
 2009-04-28  Gary Benson  <gbenson@redhat.com>
 
 	* patches/hotspot/default/icedtea-shark.patch
